# Smile_Simulation

./: .gitignore  CMakeLists.txt  README.md  blender_select_vertex.py  gpqp_solv.hpp  main.cpp  parsehead.sln  stdafx.cpp  stdafx.h  test_gpqp_solv.cpp
Debug/: imgui.ini  parsehead.ilk
nn_data/: 28063_s_nn_input.csv  28063_v_nn_input.csv  28162_s_nn_input.csv  28162_v_nn_input.csv  28218_s_nn_input.csv  28218_v_nn_input.csv  28555_s_nn_input.csv  28555_v_nn_input.csv  28606_s_nn_input.csv  28606_v_nn_input.csv  28627_s_nn_input.csv  28627_v_nn_input.csv  28939_s_nn_input.csv  28939_v_nn_input.csv  28987_s_nn_input.csv  28987_v_nn_input.csv  29050_s_nn_input.csv  29050_v_nn_input.csv  29109_s_nn_input.csv  29109_v_nn_input.csv  29169_s_nn_input.csv  29169_v_nn_input.csv  29273_s_nn_input.csv  29273_v_nn_input.csv  29297_s_nn_input.csv  29297_v_nn_input.csv  29341_s_nn_input.csv  29341_v_nn_input.csv  29486_s_nn_input.csv  29486_v_nn_input.csv  29653_s_nn_input.csv  29653_v_nn_input.csv  29742_s_nn_input.csv  29742_v_nn_input.csv  29891_s_nn_input.csv  29891_v_nn_input.csv  29923_s_nn_input.csv  29923_v_nn_input.csv  29927_s_nn_input.csv  29927_v_nn_input.csv  (+66 more)
parsehead/: 28063_s_canon.csv  Config.h  Config.h.in  Weights.txt  X.txt  blendcalc.cpp  blendcalc.h  face_mesh.blend  face_points.txt  fragment.glsl  fragmentTex.glsl  gpqp_solv.hpp  main.cpp  model_size.txt  parsehead.vcxproj  parsehead.vcxproj.filters  stdafx.cpp  stdafx.h  test.cpp  test_gpqp_solv.cpp  vertex.glsl  vertexTex.glsl
parsehead/Debug/: vc141.idb
parsehead/Debug/parsehead.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  parsehead.lastbuildstate
parsehead/face_models/: face.mb
parsehead/imgui/: imgui_impl_sdl_gl3.cpp  main.cpp
parsehead/split/: 28063_s_canon.csv  28063_s_out.csv  28063_v_canon.csv  28063_v_out.csv  28162_s_canon.csv  28162_s_out.csv  28162_v_canon.csv  28162_v_out.csv  28218_s_canon.csv  28218_s_out.csv  28218_v_canon.csv  28218_v_out.csv  28555_s_canon.csv  28555_s_out.csv  28555_v_canon.csv  28555_v_out.csv  28606_s_canon.csv  28606_s_out.csv  28606_v_canon.csv  28606_v_out.csv  28627_s_canon.csv  28627_s_out.csv  28627_v_canon.csv  28627_v_out.csv  28939_s_canon.csv  28939_s_out.csv  28939_v_canon.csv  28939_v_out.csv  28987_s_canon.csv  28987_s_out.csv  28987_v_canon.csv  28987_v_out.csv  29050_s_canon.csv  29050_s_out.csv  29050_v_canon.csv  29050_v_out.csv  29109_s_canon.csv  29109_s_out.csv  29109_v_canon.csv  29109_v_out.csv  (+160 more)
